Updates to memory_map_branch

--- a/html/genindex.html
+++ b/html/genindex.html
@@ -67,9 +67,14 @@
 
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
  | <a href="#R"><strong>R</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
@@ -78,9 +83,25 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/memory_map.html#r2x.memory_map.AccessType">AccessType (class in r2x.memory_map)</a>
 </li>
+      <li><a href="source/memory_map.html#r2x.memory_map.MemoryComponent.accessType">accessType (r2x.memory_map.MemoryComponent property)</a>
+</li>
+      <li><a href="source/memory_map.html#r2x.memory_map.MemoryMap.add_bank">add_bank() (r2x.memory_map.MemoryMap method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.Register.add_field">add_field() (r2x.memory_map.Register method)</a>
+</li>
+      <li><a href="source/memory_map.html#r2x.memory_map.AddressBank.add_register">add_register() (r2x.memory_map.AddressBank method)</a>
+</li>
       <li><a href="source/memory_map.html#r2x.memory_map.AddressBank">AddressBank (class in r2x.memory_map)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.Register.dimension">dimension (r2x.memory_map.Register property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -90,14 +111,34 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/memory_map.html#r2x.memory_map.Field">Field (class in r2x.memory_map)</a>
 </li>
+      <li><a href="source/memory_map.html#r2x.memory_map.AddressBank.from_dict">from_dict() (r2x.memory_map.AddressBank class method)</a>
+
+      <ul>
+        <li><a href="source/memory_map.html#r2x.memory_map.Field.from_dict">(r2x.memory_map.Field class method)</a>
+</li>
+        <li><a href="source/memory_map.html#r2x.memory_map.MemoryComponent.from_dict">(r2x.memory_map.MemoryComponent class method)</a>
+</li>
+        <li><a href="source/memory_map.html#r2x.memory_map.MemoryMap.from_dict">(r2x.memory_map.MemoryMap class method)</a>
+</li>
+        <li><a href="source/memory_map.html#r2x.memory_map.Register.from_dict">(r2x.memory_map.Register class method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.AccessType.from_str">from_str() (r2x.memory_map.AccessType class method)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.MemoryComponent">MemoryComponent (class in r2x.memory_map)</a>
+</li>
       <li><a href="source/memory_map.html#r2x.memory_map.MemoryMap">MemoryMap (class in r2x.memory_map)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     module
 
@@ -107,6 +148,26 @@
         <li><a href="source/memory_map.html#module-r2x.memory_map">r2x.memory_map</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.MemoryComponent.name">name (r2x.memory_map.MemoryComponent property)</a>
+
+      <ul>
+        <li><a href="source/memory_map.html#r2x.memory_map.MemoryMap.name">(r2x.memory_map.MemoryMap property)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.MemoryComponent.offset">offset (r2x.memory_map.MemoryComponent property)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -127,9 +188,13 @@
         <li><a href="source/memory_map.html#module-r2x.memory_map">module</a>
 </li>
       </ul></li>
+      <li><a href="source/memory_map.html#r2x.memory_map.Register">Register (class in r2x.memory_map)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/memory_map.html#r2x.memory_map.Register">Register (class in r2x.memory_map)</a>
+      <li><a href="source/memory_map.html#r2x.memory_map.MemoryComponent.reserved">reserved (r2x.memory_map.MemoryComponent property)</a>
+</li>
+      <li><a href="source/memory_map.html#r2x.memory_map.Field.reset">reset (r2x.memory_map.Field property)</a>
 </li>
       <li><a href="source/memory_map.html#r2x.memory_map.AccessType.ReturnToZero">ReturnToZero (r2x.memory_map.AccessType attribute)</a>
 </li>
@@ -140,8 +205,38 @@
   </ul></td>
 </tr></table>
 
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.AddressBank.to_dict">to_dict() (r2x.memory_map.AddressBank method)</a>
+
+      <ul>
+        <li><a href="source/memory_map.html#r2x.memory_map.Field.to_dict">(r2x.memory_map.Field method)</a>
+</li>
+        <li><a href="source/memory_map.html#r2x.memory_map.MemoryComponent.to_dict">(r2x.memory_map.MemoryComponent method)</a>
+</li>
+        <li><a href="source/memory_map.html#r2x.memory_map.MemoryMap.to_dict">(r2x.memory_map.MemoryMap method)</a>
+</li>
+        <li><a href="source/memory_map.html#r2x.memory_map.Register.to_dict">(r2x.memory_map.Register method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.MemoryComponent.volatile">volatile (r2x.memory_map.MemoryComponent property)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/memory_map.html#r2x.memory_map.Field.width">width (r2x.memory_map.Field property)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/memory_map.html#r2x.memory_map.AccessType.WO">WO (r2x.memory_map.AccessType attribute)</a>
 </li>
